--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
 	"description": "Subv redesigns V2EX",
 	"background_page": "background.html",
 	"browser_action": {
-		"default_icon": "assets/images/icon9.png"
+		"default_icon": "assets/image/icon9.png"
 		//"popup": "index.html"
 	},
 	"permissions": [
 		"tabs",
 		"http://www.v2ex.com/",
-		"https://www.v2ex.com/",
+		"https://www.v2ex.com/"
 	]
 }
