Try-out the topic loading design... bad scroll performance in div

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
 	},
 	"permissions": [
 		"tabs",
+		"http://localhost/", // for local debug
 		"http://www.v2ex.com/",
 		"https://www.v2ex.com/"
 	]
